Fix logo center alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -42,11 +42,6 @@ header,
 /* --------------- NAV RULES ---------------*/
 
 /* Logo size in rem*/
-.logo img {
-  height: 8rem;
-  width: 8rem;
-}
-
 .nav {
   display: flex;
   flex-direction: column;
@@ -61,14 +56,17 @@ header,
   text-align: center;
 }
 
-.logo {
+.nav .logo {
   position: relative;
+  width: 12rem;
 }
 
 .logo img {
-    position: absolute;
-    bottom: -3.5rem;
-    left: 0;
+  height: 12rem;
+  width: 12rem;
+  position: absolute;
+  bottom: -6rem;
+  left:0;
   }
 
 /* --------------- INTRO RULES ---------------*/
@@ -146,9 +144,7 @@ footer {
   }
 
   .logo img {
-    position: absolute;
     left: 0;
-    bottom: -4.2rem;
   }
 
   /* Add margins*/
